modify content, profile picture, social media icon

--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Prologue by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Prologue by HTML5 UP</title>
+		<title>Amanda's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,9 +15,11 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-							<h1 id="title">Jane Doe</h1>
-							<p>Hyperspace Engineer</p>
+							<span class="image avatar48">
+								<img class="avatar-round" src="images/avatar.jpg" alt="" />
+							</span>
+							<h1 id="title">Amanda Kartikasari</h1>
+							<p>Performance Marketing | Masters in Prosperity, Innovation and Entrepreneurship</p>
 						</div>
 
 					<!-- Nav -->
@@ -41,10 +38,10 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
+							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
@@ -60,14 +57,14 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
-								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
-								<p>Ligula scelerisque justo sem accumsan diam quis<br />
-								vitae natoque dictum sollicitudin elementum.</p>
+								<h2 class="alt">Hi! I'm <strong>Amanda</strong>, a former fashion designer<br />
+								now working in tech.</h2>
+								<p>I am specialised in digital marketing, innovation, and tech-driven businesses. <br />
+								</p>
 							</header>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">Magna Aliquam</a>
+								<a href="#portfolio" class="button scrolly">See Projects</a>
 							</footer>
 
 						</div>
@@ -81,23 +78,22 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p>
+							<p>I have been working on projects that are centred around human, fashion, sustainability, and technology.
+								Click on the images below!
+							</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="https://github.com/amandakartikasari/finder" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
-											<h3>Ipsum Feugiat</h3>
+											<h3><a href="https://github.com/amandakartikasari/finder">CFG Data & SQL Project: Finder, Job Match for Tech Jobs</a></h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 										<header>
-											<h3>Rhoncus Semper</h3>
+											<h3>UCL Innovation & Enterprise Pitch: FoundHer, Bringing Together Women in Tech </h3>
 										</header>
 									</article>
 								</div>
@@ -105,13 +101,13 @@
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
-											<h3>Magna Nullam</h3>
+											<h3>UCL Connected Innovation Project: Robogee</h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
-											<h3>Natoque Vitae</h3>
+											<h3>RevoU Digital Marketing Project: KitaCuci, A Green Laundry</h3>
 										</header>
 									</article>
 								</div>
@@ -119,13 +115,13 @@
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 										<header>
-											<h3>Dolor Penatibus</h3>
+											<h3>Transformative Entrepreneurship Design Pitch: FashNation </h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 										<header>
-											<h3>Orci Convallis</h3>
+											<h3>Medium Blog: My Journey to Prosperity</h3>
 										</header>
 									</article>
 								</div>
@@ -144,12 +140,11 @@
 
 							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p>I started my tech journey in 2020 by taking a full-stack digital marketing bootcamp at <a href="https://revou.co">RevoU</a>.
+								After one year working as Teaching Assistant for the faculty and Digital Marketing Strategist for RevoU Labs,
+								I pursued masters degree in Prosperity, Innovation and Entrepreneurship at University College London. At the same time,
+								I continued to develop my tech skills by joining tech skills courses at <a href="https://codefirstgirls.com">Code First Girls</a> and <a href="https://www.shelovesdata.com">She Loves Data</a>.
+								Over the year, I have gained SQL, Git, and HTML5 skills.</p>
 
 						</div>
 					</section>
@@ -162,10 +157,8 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>Elementum sem parturient nulla quam placerat viverra
-							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
+							<p> Drop your questions, comments or collaboration inquiries here!
+							</p>
 
 							<form method="post" action="#">
 								<div class="row">
@@ -190,7 +183,7 @@
 
 				<!-- Copyright -->
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Amanda's Portfolio. All rights reserved.</li>
 					</ul>
 
 			</div>
